--- a/PrograYProducAvanz-Examen1/PrograYProducAvanz-Examen1/PrograYProducAvanz-Examen1.csproj
+++ b/PrograYProducAvanz-Examen1/PrograYProducAvanz-Examen1/PrograYProducAvanz-Examen1.csproj
@@ -43,6 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Character.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
